# mastodon-translators-api

./: .gitignore  AGENTS.md  Dockerfile  README.md  app.py  entrypoint.sh  pyproject.toml  requirements.txt  uwsgi.ini
.github/workflows/: cd.yml
src/mta/: cache.py  main.py  models.py  openai_backend.py  openai_chat_backend.py  router.py  settings.py
tests/: conftest.py  test_api.py  test_openai_backend.py  test_openai_chat_backend.py  test_router_openai.py  test_router_openai_chat.py
