[project]
name = "mastodon-translators-api"
version = "0.2.0"
description = "LibreTranslate-compatible API for Mastodon powered by translators"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.138.0,<1.0.0",
  "langdetect>=1.0.9,<2.0.0",
  "python-multipart>=0.0.32,<1.0.0",
  "translators>=6.0.4,<7.0.0",
  "uvicorn[standard]>=0.49.0,<1.0.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1,<1.0.0",
  "mypy>=2.1.0,<3.0.0",
  "pytest>=9.1.1,<10.0.0",
  "ruff>=0.15.18,<1.0.0",
]

[project.scripts]
mastodon-translators-api = "mta.main:main"

[build-system]
requires = ["uv_build>=0.11.23,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "mta"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["A", "B", "C4", "E", "F", "I", "N", "UP"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["langdetect", "langdetect.*"]
ignore_missing_imports = true
